# stx-app-oran-o2

./: .gitreview  .zuul.yaml  centos_pkg_dirs_containers  centos_tarball-dl.lst  debian_iso_image.inc  debian_pkg_dirs  test-requirements.txt
python-k8sapp-oran-o2/centos/: build_srpm.data  python-k8sapp-oran-o2.spec
python-k8sapp-oran-o2/debian/: meta_data.yaml
python-k8sapp-oran-o2/debian/deb_folder/: changelog  control  python3-k8sapp-oran-o2-wheels.install  python3-k8sapp-oran-o2.install  rules
python-k8sapp-oran-o2/k8sapp_oran_o2/: README.rst  pylint.rc  setup.cfg  tox.ini
python-k8sapp-oran-o2/k8sapp_oran_o2/k8sapp_oran_o2/common/: constants.py
python-k8sapp-oran-o2/k8sapp_oran_o2/k8sapp_oran_o2/helm/: oran_o2.py
python-k8sapp-oran-o2/k8sapp_oran_o2/k8sapp_oran_o2/tests/: test_plugins.py
python3-k8sapp-oran-o2/debian/: meta_data.yaml
python3-k8sapp-oran-o2/debian/deb_folder/: copyright  rules
python3-k8sapp-oran-o2/k8sapp_oran_o2/: .stestr.conf  setup.cfg  tox.ini
python3-k8sapp-oran-o2/k8sapp_oran_o2/k8sapp_oran_o2/tests/: test_oran_o2.py  test_plugins.py
stx-oran-o2-helm/centos/: build_srpm.data  stx-oran-o2-helm.spec
stx-oran-o2-helm/debian/: meta_data.yaml
stx-oran-o2-helm/debian/deb_folder/: changelog  control  copyright  rules
stx-oran-o2-helm/stx-oran-o2-helm/fluxcd-manifests/: kustomization.yaml
stx-oran-o2-helm/stx-oran-o2-helm/fluxcd-manifests/base/: namespace.yaml
stx-oran-o2-helm/stx-oran-o2-helm/fluxcd-manifests/oran-o2/: helmrelease.yaml  kustomization.yaml  oran-o2-static-overrides.yaml
