[metadata]
name = k8sapp-oran-o2
summary = StarlingX sysinv extensions for oran o2
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_oran_o2

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    oran-o2 = systemconfig.helm_plugins.oran_o2

systemconfig.helm_plugins.oran_o2 =
    001_oran-o2 = k8sapp_oran_o2.helm.oran_o2:Orano2Helm

[bdist_wheel]
universal = 1
